# glances-win-run

./: glances.conf  pyproject.toml  readme.md  run.bat
