[tool.poetry]
name = "glances-win-bin"
version = "0.1.0"
description = ""
authors = ["mwtjc <mwtjc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
glances = {extras = ["all"], version = "^3.4.0.3"}
windows-curses = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
